samples/_failures_safe/1761247746_368e35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f66dbccc.c: In function ‘main’:
./samples/SAFE/__tmp_f66dbccc.c:129:5: error: expected expression at end of input
  129 |     while (
      |     ^~~~~
./samples/SAFE/__tmp_f66dbccc.c:129:5: error: expected declaration or statement at end of input
